--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <!-- Recent Post -->
 <div class="recent-post">              
-  <h4>Recent Post</h4>
-    <ul>
+  <h2>Recent Post</h2>
+    <ul class="list-unstyled">
     {% for post in site.posts limit:3 %}
       <li>
         <a href="{{ post.url | prepend: site.url }}"><h4>{{ post.title }}<br/><small>{{ post.date | date: "%b %-d, %Y" }}{% if post.author %} • {{ post.author }}{% endif %}</small></h4></a>
@@ -12,7 +12,7 @@
 <div class="hline"></div>
 <!-- Blogpost Tags -->
 <div class="blogpost-tags">
-  <h4>All Tags</h4>
+  <h2>All Tags • <small><a href="{{ "/tags" | prepend: site.url }}">View all tags</a></small></h2>
   {% for tag in site.tags %}
     {% assign posttag = tag | first %} 
       {% comment %}
@@ -21,7 +21,5 @@
       {% endcomment %}
     <a href="{{ "/tags&#35;" | prepend: site.url | append: posttag }}" class="btn btn-info">{{posttag}}</a>
   {% endfor %}
-
-  <p><a href="{{ "/tags" | prepend: site.url }}">View all tags</a></p>
 </div>
 <div class="hline"></div>
