--- a/assets/css/addons.css
+++ b/assets/css/addons.css
@@ -1,5 +1,5 @@
 /*********************************************
-	Global override
+	Global elements override
 **********************************************/
 
 @media (min-width: 768px) and (max-width: 991px) {
@@ -10,49 +10,19 @@
   #blue { margin-top: 100px; }
 }
 
-/*
+/* Utilities */
 
-Original font from "style.css"
-body {
-    background: #ffffff;
-    margin: 0;
-    height: 100%;
-    color: #384452;
-    font-family: 'Lato', sans-serif;
-    font-weight: 400;
-    }
+.no-padding           {  padding: 0     !important; }
+.no-margin            {  margin:  0     !important; }
+.width-fullcontainer  {  width:   100%  !important; }
 
-h1, h2, h3, h4, h5, h6 {
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-}
 
-p {
-    padding: 0;
-    margin-bottom: 12px;
-    font-family: 'Lato', sans-serif;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 24px;
-    color: #384452;
-    margin-top: 10px;
-}
-
-a {
-    padding: 0;
-    margin: 0;
-    text-decoration: none;
-    -webkit-transition: background-color .4s linear, color .4s linear;
-    -moz-transition: background-color .4s linear, color .4s linear;
-    -o-transition: background-color .4s linear, color .4s linear;
-    -ms-transition: background-color .4s linear, color .4s linear;
-    transition: background-color .4s linear, color .4s linear;
-}
-*/
+/*********************************************
+  THAI FONTS + FONT OVERRIDING
+**********************************************/
 
 
 /* Thai fonts */
-
 /* TH Saraban new by SIPA */
 
 @font-face{
@@ -73,29 +43,96 @@ a {
     url('../fonts/Quark-Light.otf') format('opentype');
 }
 
+/* FONTS */
 
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'saraban', sans-serif;
+  font-weight: bolder;
+}
 
+h1 {  font-size: 48px !important; }  
+h2 {  font-size: 40px !important; }  
+h3 {  font-size: 36px !important; }  
+h4 {  font-size: 32px !important; }  
+h5 {  font-size: 28px !important; }  
+h6 {  font-size: 26px !important; }  
 
-/* thai font override */
+p {
+  font-family:    'saraban', sans-serif;
+  font-weight:    normal;
+  font-size:      20px !important;
+  line-height:    26px;
+  letter-spacing: 0.4px;
+  color:          #384452;
 
-.testimonial-th { font-family: 'quark',sans-serif;  }
-.content-thaifont { font-family: 'saraban',sans-serif }
+  padding:        0;
+  margin-top:     10px;
+  margin-bottom:  10px;
+}
 
+a {
+  font-family:  'saraban', sans-serif;
+  font-size:    20px;
+  font-weight:  bolder;
+  text-decoration:  none;
+  padding:  0;
+  margin:   0;
+  
+  -webkit-transition: background-color .4s linear, color .4s linear;
+  -moz-transition:    background-color .4s linear, color .4s linear;
+  -o-transition:      background-color .4s linear, color .4s linear;
+  -ms-transition:     background-color .4s linear, color .4s linear;
+  transition:         background-color .4s linear, color .4s linear;
+}
 
-/* Utilities */
+a:hover, a:focus {
+  text-decoration: none;
+  color:#01b2fe;
+}
 
-.no-padding { padding: 0 !important;  }
-.no-margin  { margin: 0 !important;   }
-.width-fullcontainer {  width: 100% !important}
+input[type=submit],input[type=text],input[type=email] {
+  font-family:  'saraban', sans-serif;
+  font-size:    20px;
+}
 
+/* Quote section */
 
+#quote h1,#quote h2,#quote h3,
+#quote h4,#quote h5,#quote h6 {
+  font-family: 'quark', sans-serif;
+  font-weight: bold;
+}
 
-/* BOOTSTRAP OVERRIDE */
+#quote p, #quote small {
+  font-face: 'quark', sans-serif;
+  font-weight: light;
+}
+
+/* ORIGINAL THEME OVERRIDE */
 
 .navbar-default .navbar-brand:hover, 
 .navbar-default .navbar-brand:focus {
   color: #00b3fe;
 }
+
+.navbar-brand {
+  font-family: 'saraban', sans-serif;
+  font-weight: 900;
+  font-size: 30px !important;
+}
+
+.navbar-default .navbar-nav > li > a {
+    color: #ffffff;
+    font-weight: bolder;
+    font-size: 20px;
+}
+
+/* BOOTSTRAP OVERRIDE */
+
+.btn {  font-size: 20px;  }
+.form-group input[type=email] {  height: 100%;  }
+
+
 
 
 
@@ -150,16 +187,16 @@ a {
   #portfolio-modal-infographics,
   #portfolio-modal-altrock,
   #portfolio-modal-altrock{
-      display: none;
+    display: none; 
   }
 
 
 /* service icon */
 
 #service i {
-    color: #00b3fe;
-    font-size: 60px;
-    padding: 15px;
+  color: #00b3fe;
+  font-size: 60px;
+  padding: 15px;
 
   -webkit-transition: all .2s ease-in-out;
   -moz-transition: all .2s ease-in-out;
@@ -230,7 +267,9 @@ a {
 
 aside>div { margin-bottom: 20px; }
 
+
 .post-meta a:hover { color:#ffffff; }
+
 
 
 
