--- a/assets/css/addons.css
+++ b/assets/css/addons.css
@@ -104,27 +104,89 @@ input[type=submit],input[type=text],input[type=email] {
 }
 
 #quote p, #quote small {
-  font-face: 'quark', sans-serif;
+  font-family: 'quark', sans-serif;
   font-weight: light;
 }
 
+
+
+
+
+/*********************************************
+  SUB-HEADER
+**********************************************/
+
+#smallheader {
+  background: #121c1e;
+  color: #35d9f9;
+  margin: 70px auto;
+  padding: 25px 0 25px 30px;
+}
+
+
 /* ORIGINAL THEME OVERRIDE */
+/* NAVBAR */
 
-.navbar-default .navbar-brand:hover, 
-.navbar-default .navbar-brand:focus {
-  color: #00b3fe;
+.navbar-default {
+  background: #232b32;
+  border-bottom-color: #35d9f9; 
 }
 
-.navbar-brand {
-  font-family: 'saraban', sans-serif;
-  font-weight: 900;
-  font-size: 30px !important;
+  .navbar-default .navbar-brand:hover, 
+  .navbar-default .navbar-brand:focus {
+    color: #00b3fe;
+  }
+
+  .navbar-brand {
+    font-family: 'saraban', sans-serif;
+    font-weight: 900;
+    font-size: 30px !important;
+  }
+
+  .navbar-default .navbar-nav > li > a {
+      color: #ffffff;
+      font-weight: bolder;
+      font-size: 20px;
+  }
+
+
+/* FOOTER */
+
+#footerwrap {
+    background: #121c1e;
 }
 
-.navbar-default .navbar-nav > li > a {
+#footerwrap p {
     color: #ffffff;
-    font-weight: bolder;
-    font-size: 20px;
+}
+
+
+/* Button */
+.btn-main {
+  color: #ffffff;
+  background-color: #2d5e67;
+}
+
+.btn-main:hover {
+  color: #ffffff;
+  background-color: #35d9f9;
+}
+
+.btn-theme {
+  color: #ffffff;
+  background-color: #2d5e67;
+  border-color: #384452;
+  margin: 4px;
+}
+
+.btn-theme:hover,
+.btn-theme:focus,
+.btn-theme:active,
+.btn-theme.active,
+.open .dropdown-toggle.btn-theme {
+  color: #ffffff;
+  background-color: #35d9f9;
+  border-color: #00b3fe;
 }
 
 /* BOOTSTRAP OVERRIDE */
@@ -137,18 +199,36 @@ input[type=submit],input[type=text],input[type=email] {
 
 
 /*********************************************
-	Homepage
+  Homepage
 **********************************************/
 
+#headerwrap     { background: #121c1e;  }
 
-.laptop-teaser {
-  padding: 0;
-  border:15px solid #000;
-  border-radius: 15px !important;
-}
+  #headerwrap h1, #headerwrap h2, #headerwrap h3,
+  #headerwrap h4, #headerwrap h5, #headerwrap h6 { 
+    color: #35d9f9; 
+  }
+
+  #headerwrap p   { color: #ffffff; }
+
+
+  .laptop-teaser {
+    padding: 0;
+    border:15px solid #000;
+    border-radius: 15px !important;
+  }
 
 
 /*GRID ITEM: music collection GRID*/
+
+#portfoliowrap {
+  background: #efefef;
+  color: #121c1e;
+}
+
+  #portfoliowrap h3 { color: #121c1e; }
+  #portfoliowrap p  { color: #121c1e; }
+
 
   .musiccollection{
     position: relative;
